// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <SortableTablePatients /> should renders with props correctly 1`] = `
<SortableTablePatients
  columnNameSortBy="cause"
  data={
    Array [
      Object {
        "cause": 3123123123,
        "reaction": 123123,
        "source": "ethercis",
        "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
      },
      Object {
        "cause": 123,
        "reaction": 123,
        "source": "test",
        "sourceId": "test",
      },
    ]
  }
  emptyDataMessage="No allergies"
  headers={
    Array [
      Object {
        "key": "cause",
        "title": "Cause",
        "width": "25%",
      },
      Object {
        "key": "reaction",
        "title": "Reaction",
        "width": "65%",
      },
      Object {
        "display": "none",
        "key": "sourceId",
        "title": "Source ID",
        "width": "0",
      },
    ]
  }
  resourceData={
    Array [
      Object {
        "cause": 3123123123,
        "reaction": 123123,
        "source": "ethercis",
        "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
      },
      Object {
        "cause": 123,
        "reaction": 123,
        "source": "test",
        "sourceId": "test",
      },
    ]
  }
  sortingOrder="asc"
  table="patientsList"
>
  <div>
    <table
      className="table table-striped  table-bordered table-sorted table-hover table-fixedcol table-patients-name"
    >
      <colgroup>
        <col
          key="__colHeadersName__1"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </colgroup>
      <thead>
        <SortableTableHeaderRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
            ]
          }
          sortingOrder="asc"
        >
          <tr>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__12"
              name="cause"
              onClick={[Function]}
              sortingOrder="asc"
              title="Cause"
            >
              <th
                className="sorted asc"
                name="cause"
                onClick={[Function]}
              >
                <span>
                  Cause
                </span>
                 
              </th>
            </SortableTableHeaderCell>
          </tr>
        </SortableTableHeaderRow>
      </thead>
      <tbody>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={0}
          key="__SortableTableRow__2"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={1}
          key="__SortableTableRow__3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
      </tbody>
    </table>
    <table
      className="table table-striped table-bordered table-sorted table-hover table-fixedcol table-patients-full rwd-table patientsList"
    >
      <colgroup>
        <col
          key="__colHeaders__4"
          style={
            Object {
              "width": "25%",
            }
          }
        />
        <col
          key="__colHeaders__5"
          style={
            Object {
              "width": "65%",
            }
          }
        />
        <col
          key="__colHeaders__6"
          style={
            Object {
              "display": "none",
              "width": "0",
            }
          }
        />
      </colgroup>
      <thead>
        <SortableTableHeaderRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          sortingOrder="asc"
        >
          <tr>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__13"
              name="cause"
              onClick={[Function]}
              sortingOrder="asc"
              title="Cause"
            >
              <th
                className="sorted asc"
                name="cause"
                onClick={[Function]}
              >
                <span>
                  Cause
                </span>
                 
              </th>
            </SortableTableHeaderCell>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__14"
              name="reaction"
              onClick={[Function]}
              sortingOrder={null}
              title="Reaction"
            >
              <th
                className=""
                name="reaction"
                onClick={[Function]}
              >
                <span>
                  Reaction
                </span>
                 
              </th>
            </SortableTableHeaderCell>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__15"
              name="sourceId"
              onClick={[Function]}
              sortingOrder={null}
              title="Source ID"
            >
              <th
                className=""
                name="sourceId"
                onClick={[Function]}
              >
                <span>
                  Source ID
                </span>
                 
              </th>
            </SortableTableHeaderCell>
          </tr>
        </SortableTableHeaderRow>
      </thead>
      <tbody>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={0}
          key="__SortableTableRow__7"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={
            Array [
              Object {
                "name": "cause",
                "value": 3123123123,
              },
              Object {
                "name": "reaction",
                "value": 123123,
              },
              Object {
                "name": "sourceId",
                "value": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
            ]
          }
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <td
              className="sorted text-center"
              data-table-hover={true}
              data-th="Cause"
              key="__SortableTableHoveredRow__16"
              name="cause"
              onClick={[Function]}
            >
              3123123123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Reaction"
              key="__SortableTableHoveredRow__17"
              name="reaction"
              onClick={[Function]}
            >
              123123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Source ID"
              key="__SortableTableHoveredRow__18"
              name="sourceId"
              onClick={[Function]}
            >
              c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4
            </td>
          </tr>
        </SortableTableHoveredRow>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={1}
          key="__SortableTableRow__8"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={
            Array [
              Object {
                "name": "cause",
                "value": 123,
              },
              Object {
                "name": "reaction",
                "value": 123,
              },
              Object {
                "name": "sourceId",
                "value": "test",
              },
            ]
          }
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <td
              className="sorted text-center"
              data-table-hover={true}
              data-th="Cause"
              key="__SortableTableHoveredRow__19"
              name="cause"
              onClick={[Function]}
            >
              123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Reaction"
              key="__SortableTableHoveredRow__20"
              name="reaction"
              onClick={[Function]}
            >
              123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Source ID"
              key="__SortableTableHoveredRow__21"
              name="sourceId"
              onClick={[Function]}
            >
              test
            </td>
          </tr>
        </SortableTableHoveredRow>
      </tbody>
    </table>
    <table
      className="table table-striped table-bordered table-sorted table-fixedcol table-patients-controls"
    >
      <colgroup>
        <col
          key="__colHeadersView__9"
          style={
            Object {
              "width": "0",
            }
          }
        />
      </colgroup>
      <thead>
        <SortableTableHeaderRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          sortingOrder="asc"
        >
          <tr>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__22"
              name="sourceId"
              onClick={[Function]}
              sortingOrder={null}
              title="Source ID"
            >
              <th
                className=""
                name="sourceId"
                onClick={[Function]}
              >
                <span>
                  Source ID
                </span>
                 
              </th>
            </SortableTableHeaderCell>
          </tr>
        </SortableTableHeaderRow>
      </thead>
      <tbody>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={0}
          key="__SortableTableRow__10"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={1}
          key="__SortableTableRow__11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
      </tbody>
    </table>
  </div>
</SortableTablePatients>
`;

exports[`Component <SortableTablePatients /> should renders with props correctly 2`] = `
<SortableTablePatients
  columnNameSortBy="cause"
  data={
    Array [
      Object {
        "cause": 3123123123,
        "reaction": 123123,
        "source": "ethercis",
        "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
      },
      Object {
        "cause": 123,
        "reaction": 123,
        "source": "test",
        "sourceId": "test",
      },
    ]
  }
  emptyDataMessage="No allergies"
  headers={
    Array [
      Object {
        "key": "cause",
        "title": "Cause",
        "width": "25%",
      },
      Object {
        "key": "reaction",
        "title": "Reaction",
        "width": "65%",
      },
      Object {
        "display": "none",
        "key": "sourceId",
        "title": "Source ID",
        "width": "0",
      },
    ]
  }
  resourceData={
    Array [
      Object {
        "cause": 3123123123,
        "reaction": 123123,
        "source": "ethercis",
        "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
      },
      Object {
        "cause": 123,
        "reaction": 123,
        "source": "test",
        "sourceId": "test",
      },
    ]
  }
  sortingOrder="asc"
  table="patientsList"
>
  <div>
    <table
      className="table table-striped  table-bordered table-sorted table-hover table-fixedcol table-patients-name"
    >
      <colgroup>
        <col
          key="__colHeadersName__1"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </colgroup>
      <thead>
        <SortableTableHeaderRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
            ]
          }
          sortingOrder="asc"
        >
          <tr>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__12"
              name="cause"
              onClick={[Function]}
              sortingOrder="asc"
              title="Cause"
            >
              <th
                className="sorted asc"
                name="cause"
                onClick={[Function]}
              >
                <span>
                  Cause
                </span>
                 
              </th>
            </SortableTableHeaderCell>
          </tr>
        </SortableTableHeaderRow>
      </thead>
      <tbody>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={0}
          key="__SortableTableRow__2"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={1}
          key="__SortableTableRow__3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
      </tbody>
    </table>
    <table
      className="table table-striped table-bordered table-sorted table-hover table-fixedcol table-patients-full rwd-table patientsList"
    >
      <colgroup>
        <col
          key="__colHeaders__4"
          style={
            Object {
              "width": "25%",
            }
          }
        />
        <col
          key="__colHeaders__5"
          style={
            Object {
              "width": "65%",
            }
          }
        />
        <col
          key="__colHeaders__6"
          style={
            Object {
              "display": "none",
              "width": "0",
            }
          }
        />
      </colgroup>
      <thead>
        <SortableTableHeaderRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          sortingOrder="asc"
        >
          <tr>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__13"
              name="cause"
              onClick={[Function]}
              sortingOrder="asc"
              title="Cause"
            >
              <th
                className="sorted asc"
                name="cause"
                onClick={[Function]}
              >
                <span>
                  Cause
                </span>
                 
              </th>
            </SortableTableHeaderCell>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__14"
              name="reaction"
              onClick={[Function]}
              sortingOrder={null}
              title="Reaction"
            >
              <th
                className=""
                name="reaction"
                onClick={[Function]}
              >
                <span>
                  Reaction
                </span>
                 
              </th>
            </SortableTableHeaderCell>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__15"
              name="sourceId"
              onClick={[Function]}
              sortingOrder={null}
              title="Source ID"
            >
              <th
                className=""
                name="sourceId"
                onClick={[Function]}
              >
                <span>
                  Source ID
                </span>
                 
              </th>
            </SortableTableHeaderCell>
          </tr>
        </SortableTableHeaderRow>
      </thead>
      <tbody>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={0}
          key="__SortableTableRow__7"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={
            Array [
              Object {
                "name": "cause",
                "value": 3123123123,
              },
              Object {
                "name": "reaction",
                "value": 123123,
              },
              Object {
                "name": "sourceId",
                "value": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
            ]
          }
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <td
              className="sorted text-center"
              data-table-hover={true}
              data-th="Cause"
              key="__SortableTableHoveredRow__16"
              name="cause"
              onClick={[Function]}
            >
              3123123123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Reaction"
              key="__SortableTableHoveredRow__17"
              name="reaction"
              onClick={[Function]}
            >
              123123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Source ID"
              key="__SortableTableHoveredRow__18"
              name="sourceId"
              onClick={[Function]}
            >
              c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4
            </td>
          </tr>
        </SortableTableHoveredRow>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={1}
          key="__SortableTableRow__8"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={
            Array [
              Object {
                "name": "cause",
                "value": 123,
              },
              Object {
                "name": "reaction",
                "value": 123,
              },
              Object {
                "name": "sourceId",
                "value": "test",
              },
            ]
          }
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <td
              className="sorted text-center"
              data-table-hover={true}
              data-th="Cause"
              key="__SortableTableHoveredRow__19"
              name="cause"
              onClick={[Function]}
            >
              123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Reaction"
              key="__SortableTableHoveredRow__20"
              name="reaction"
              onClick={[Function]}
            >
              123
            </td>
            <td
              className="text-center"
              data-table-hover={true}
              data-th="Source ID"
              key="__SortableTableHoveredRow__21"
              name="sourceId"
              onClick={[Function]}
            >
              test
            </td>
          </tr>
        </SortableTableHoveredRow>
      </tbody>
    </table>
    <table
      className="table table-striped table-bordered table-sorted table-fixedcol table-patients-controls"
    >
      <colgroup>
        <col
          key="__colHeadersView__9"
          style={
            Object {
              "width": "0",
            }
          }
        />
      </colgroup>
      <thead>
        <SortableTableHeaderRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          sortingOrder="asc"
        >
          <tr>
            <SortableTableHeaderCell
              key="__SortableTableHeaderCell__22"
              name="sourceId"
              onClick={[Function]}
              sortingOrder={null}
              title="Source ID"
            >
              <th
                className=""
                name="sourceId"
                onClick={[Function]}
              >
                <span>
                  Source ID
                </span>
                 
              </th>
            </SortableTableHeaderCell>
          </tr>
        </SortableTableHeaderRow>
      </thead>
      <tbody>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={0}
          key="__SortableTableRow__10"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
        <SortableTableHoveredRow
          columnNameSortBy="cause"
          headers={
            Array [
              Object {
                "key": "cause",
                "title": "Cause",
                "width": "25%",
              },
              Object {
                "key": "reaction",
                "title": "Reaction",
                "width": "65%",
              },
              Object {
                "display": "none",
                "key": "sourceId",
                "title": "Source ID",
                "width": "0",
              },
            ]
          }
          hoveredRowIndex=""
          index={1}
          key="__SortableTableRow__11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          resourceData={
            Array [
              Object {
                "cause": 3123123123,
                "reaction": 123123,
                "source": "ethercis",
                "sourceId": "c2c286c1-2d65-4e8a-857b-1dcf3f0fa4d4",
              },
              Object {
                "cause": 123,
                "reaction": 123,
                "source": "test",
                "sourceId": "test",
              },
            ]
          }
          rowData={Array []}
          table="patientsList"
        >
          <tr
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </SortableTableHoveredRow>
      </tbody>
    </table>
  </div>
</SortableTablePatients>
`;

exports[`Component <SortableTablePatients /> should renders with props correctly when the resourceData is empty array 1`] = `
<div>
  <table
    className="table table-striped  table-bordered table-sorted table-hover table-fixedcol table-patients-name"
  >
    <colgroup>
      <col
        key="__colHeadersName__28"
        style={
          Object {
            "width": "25%",
          }
        }
      />
    </colgroup>
    <thead>
      <SortableTableHeaderRow
        columnNameSortBy="cause"
        headers={
          Array [
            Object {
              "key": "cause",
              "title": "Cause",
              "width": "25%",
            },
          ]
        }
        sortingOrder="asc"
      />
    </thead>
    <tbody>
      <SortableTableEmptyDataRow
        amountCollumns={3}
        emptyDataMessage="No allergies"
        isLoading={false}
      />
    </tbody>
  </table>
  <table
    className="table table-striped table-bordered table-sorted table-hover table-fixedcol table-patients-full rwd-table patientsList"
  >
    <colgroup>
      <col
        key="__colHeaders__29"
        style={
          Object {
            "width": "25%",
          }
        }
      />
      <col
        key="__colHeaders__30"
        style={
          Object {
            "width": "65%",
          }
        }
      />
      <col
        key="__colHeaders__31"
        style={
          Object {
            "display": "none",
            "width": "0",
          }
        }
      />
    </colgroup>
    <thead>
      <SortableTableHeaderRow
        columnNameSortBy="cause"
        headers={
          Array [
            Object {
              "key": "cause",
              "title": "Cause",
              "width": "25%",
            },
            Object {
              "key": "reaction",
              "title": "Reaction",
              "width": "65%",
            },
            Object {
              "display": "none",
              "key": "sourceId",
              "title": "Source ID",
              "width": "0",
            },
          ]
        }
        sortingOrder="asc"
      />
    </thead>
    <tbody>
      <SortableTableEmptyDataRow
        amountCollumns={3}
        emptyDataMessage="No allergies"
        isLoading={false}
      />
    </tbody>
  </table>
  <table
    className="table table-striped table-bordered table-sorted table-fixedcol table-patients-controls"
  >
    <colgroup>
      <col
        key="__colHeadersView__32"
        style={
          Object {
            "width": "0",
          }
        }
      />
    </colgroup>
    <thead>
      <SortableTableHeaderRow
        columnNameSortBy="cause"
        headers={
          Array [
            Object {
              "display": "none",
              "key": "sourceId",
              "title": "Source ID",
              "width": "0",
            },
          ]
        }
        sortingOrder="asc"
      />
    </thead>
    <tbody>
      <SortableTableEmptyDataRow
        amountCollumns={3}
        emptyDataMessage="No allergies"
        isLoading={false}
      />
    </tbody>
  </table>
</div>
`;

exports[`Component <SortableTablePatients /> should renders with props correctly when the resourceData is undefined 1`] = `
<div>
  <table
    className="table table-striped  table-bordered table-sorted table-hover table-fixedcol table-patients-name"
  >
    <colgroup>
      <col
        key="__colHeadersName__23"
        style={
          Object {
            "width": "25%",
          }
        }
      />
    </colgroup>
    <thead>
      <SortableTableHeaderRow
        columnNameSortBy="cause"
        headers={
          Array [
            Object {
              "key": "cause",
              "title": "Cause",
              "width": "25%",
            },
          ]
        }
        sortingOrder="asc"
      />
    </thead>
    <tbody>
      <SortableTableEmptyDataRow
        amountCollumns={3}
        emptyDataMessage="No allergies"
        isLoading={true}
      />
    </tbody>
  </table>
  <table
    className="table table-striped table-bordered table-sorted table-hover table-fixedcol table-patients-full rwd-table patientsList"
  >
    <colgroup>
      <col
        key="__colHeaders__24"
        style={
          Object {
            "width": "25%",
          }
        }
      />
      <col
        key="__colHeaders__25"
        style={
          Object {
            "width": "65%",
          }
        }
      />
      <col
        key="__colHeaders__26"
        style={
          Object {
            "display": "none",
            "width": "0",
          }
        }
      />
    </colgroup>
    <thead>
      <SortableTableHeaderRow
        columnNameSortBy="cause"
        headers={
          Array [
            Object {
              "key": "cause",
              "title": "Cause",
              "width": "25%",
            },
            Object {
              "key": "reaction",
              "title": "Reaction",
              "width": "65%",
            },
            Object {
              "display": "none",
              "key": "sourceId",
              "title": "Source ID",
              "width": "0",
            },
          ]
        }
        sortingOrder="asc"
      />
    </thead>
    <tbody>
      <SortableTableEmptyDataRow
        amountCollumns={3}
        emptyDataMessage="No allergies"
        isLoading={true}
      />
    </tbody>
  </table>
  <table
    className="table table-striped table-bordered table-sorted table-fixedcol table-patients-controls"
  >
    <colgroup>
      <col
        key="__colHeadersView__27"
        style={
          Object {
            "width": "0",
          }
        }
      />
    </colgroup>
    <thead>
      <SortableTableHeaderRow
        columnNameSortBy="cause"
        headers={
          Array [
            Object {
              "display": "none",
              "key": "sourceId",
              "title": "Source ID",
              "width": "0",
            },
          ]
        }
        sortingOrder="asc"
      />
    </thead>
    <tbody>
      <SortableTableEmptyDataRow
        amountCollumns={3}
        emptyDataMessage="No allergies"
        isLoading={true}
      />
    </tbody>
  </table>
</div>
`;
